[gd_scene load_steps=2 format=3 uid="uid://cvp0v8m33r8jl"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_waxfw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_waxfw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -188.0
offset_right = 148.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.986
anchor_bottom = 0.533
offset_right = -0.0240173
offset_bottom = 0.11998
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "--Pause Menu--"
horizontal_alignment = 1

[node name="Resume Game" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="QuitDesktop" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit to Desktop"

[connection signal="pressed" from="Panel/VBoxContainer/Resume Game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitDesktop" to="." method="_on_quit_desktop_pressed"]
